# mosques-workflow

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cosmos_profiles.txt  main.py  pyproject.toml  requirements.txt  streamlit_to_bigquery.md
.astro/: config.yaml
dags/: csv_chunk_pipeline.py  dbt_pipeline.py
dags/dbt/: dbt_project.yml
dags/dbt/models/: sources.yml
dags/dbt/models/marts/: consumption_analysis.sql  consumption_riyadh.sql  consumption_stats.sql  int_meter_locations.sql  int_meter_quality.sql  int_meter_readings_with_periods.sql  riyadh_quarter_report.sql  schema.yml  violators.sql  violators_riyadh.sql
dags/dbt/models/staging/: int_exclude_ramadan.sql  stats_ramadan.sql  stats_staging.sql  stg_industry_codes.sql  stg_meter_readings.sql  stg_prayer_times.sql
dags/dbt/seeds/: prayer_times.csv
include/: .user.yml  cloud_loader.py  etl_processor.py  load_reference_data.py  pipeline_stats.py  profiles.yml
infra/: main.tf  terraform.tfvars.example
